# myself-docs

./: at java.util.concurrent.ScheduledThreadP.txt  import PyPDF2.py  kafka-consumer-incident-report-20260410.md  kafka消费节点无法重连问题排查.md  milvus_demo.db  milvus_test.py  workInfo.md  工作知识笔记.xmind  工作记录.txt  每周知识资产管理-v2.md  每日-知识资产管理.docx  每日知识资产管理-v2.md  每日知识资产管理.md  知识大纲.xmind  知识笔记.md  知识笔记.txt
docs/superpowers/plans/: 2026-06-11-mysql-mcp-server.md
docs/superpowers/specs/: 2026-06-11-mysql-mcp-server-design.md
mysql-mcp-server/: README.md  config.local.example.toml  config.local.toml  pyproject.toml
mysql-mcp-server/.codex/: config.toml
mysql-mcp-server/src/mysql_mcp/: __init__.py  config.py  guards.py  server.py
mysql-mcp-server/src/mysql_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mysql-mcp-server/tests/: test_config.py  test_guards.py
summary/: 周总结.md  学习笔记.md  技术知识图谱.xmind  技术知识库.md  月总结.md
summary/knowledge/: 工程方法论.md
summary/worklog/: 2026-06.md
知识资产/knowledge/: 工程方法论.md  技术知识图谱.xmind  技术知识库.md
知识资产/learning/: 每周知识笔记.md  知识笔记.md
知识资产/worklog/: 2026-06.md
